--- a/blogpost.html
+++ b/blogpost.html
@@ -1,13 +1,14 @@
 <html>
     <head>
-        <title>Titlo del post</title>
+        <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
       <div id="container">
         <div id="cabecera">
+          <img id="logo" src="imagenes/ATWB.png">
           Hyperblog
-          <span id="tagline">Bienvenido a hyperblog 2.0</span>
+          <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
           <h1>Este es el titulo atractivo e interesante del post</h1>
